# chat-bot-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: app.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ChatInterface.js  ChatInterface.module.css  SearchBar.js  SearchBar.module.css
